--- a/src/main/resources/templates/EnviarMensagem.html
+++ b/src/main/resources/templates/EnviarMensagem.html
@@ -2,14 +2,74 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Enviar Mensagem</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f2f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        .container {
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            padding: 20px;
+            width: 400px;
+            text-align: center;
+        }
+
+        h1 {
+            color: #1877f2; /* Facebook blue */
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        label {
+            margin-top: 10px;
+            color: #666;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            box-sizing: border-box;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+
+        input[type="submit"] {
+            background-color: #1877f2;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 15px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Enviar Mensagem</h1>
-    <form action="#" th:action="@{'/mensagem-front/enviar'}" th:object="${mensagem}" method="post">
-        <input type="hidden" th:field="*{destinatario}" th:value="${destinatario}" />
-        <label for="corpo">Corpo da Mensagem:</label>
-        <input type="text" th:field="*{corpo}" id="corpo" placeholder="Digite sua mensagem">
-        <input type="submit" value="Enviar Mensagem">
-    </form>
+    <div class="container">
+        <h1>Enviar Mensagem</h1>
+        <form action="#" th:action="@{'/mensagem-front/enviar'}" th:object="${mensagem}" method="post">
+            <input type="hidden" th:field="*{destinatario}" th:value="${destinatario}" />
+            <label for="corpo">Corpo da Mensagem:</label>
+            <input type="text" th:field="*{corpo}" id="corpo" placeholder="Digite sua mensagem">
+            <label for="remetente">Remetente:</label>
+            <input type="text" th:field="*{remetente}" id="remetente" placeholder="Seu nome">
+            <input type="submit" value="Enviar Mensagem">
+        </form>
+    </div>
 </body>
 </html>
